# teiki

./: CLAUDE.md  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix  result
module/: default.nix
src/: app.rs  config.rs  error.rs  executor.rs  lib.rs  main.rs  notifier.rs  outcome.rs  platform.rs  sample.yaml
